package zak380mGazyli.Displays;

public interface Display {
    public void displayInterface(String board); 
    public String getCommands();
    public void quit();
}
